remove lombok from script