@@ -18,19 +18,7 @@ else
     exit 1
 fi
 
-LOMBOK_PATH=$(find ~/.m2 -name "lombok-1.18.38.jar" | head -n 1)
-
-JAVAFX_OPTIONS="-Djavafx.verbose=true"
-
-if [ ! -z "$LOMBOK_PATH" ]; then
-    JAVAFX_OPTIONS="$JAVAFX_OPTIONS -Djavafx.maven.javaagent.path=$LOMBOK_PATH"
-    echo "Build with Lombok : $LOMBOK_PATH"
-else
-    echo "LOMBOK_PATH not found"
-    exit 1
-fi
-
-
+ 
 # Clean and package the project
 echo "Building the JavaFX application..."
 $MVN_CMD clean package -Dmaven.compiler.forceJavacCompilerUse=true || { echo "Failed to build the application"; exit 1; }
@@ -39,17 +27,8 @@ echo "Build done"
 
 
 echo "Running the application..."
-$MVN_CMD javafx:run \
-    -Djavafx.run.jvmArgs="\
-        --module-path $LOMBOK_PATH \
-        --add-modules lombok \
-        --add-opens java.base/java.lang=ALL-UNNAMED \
-        --add-opens java.base/sun.net.www.protocol.jar=ALL-UNNAMED \
-        -javaagent:$LOMBOK_PATH" \
-    || { echo "Failed to run application"; exit 1; }
+$MVN_CMD javafx:run  || { echo "Failed to run application"; exit 1; }
 
 echo "Application execution completed."
-
-
-echo "Application has completed execution."
+ 
 
